Kubernetes/manifests/traefik/strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mw-admin
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /2
