Kubernetes/manifests/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: default-mw-admin@kubernetescrd

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  apache-service
                port:
                  number: 8083
          - path: /2
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8083
