Kubernetes/manifests/traefik/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 8083
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache-service
            port:
              number: 8083
