Kubernetes/manifests/traefik/v2-ingress-tfsvc.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-weighted
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Path(`/`)
      kind: Rule
      services:
        - name: wrr-caddies
          kind: TraefikService
