Kubernetes/manifests/traefik/v2-weighted-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: weighted-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: nginx-service
          port: 8083
          weight: 50
        - name: apache-service
          port: 8083
          weight: 50
